[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pupmapper"
description = "Tool & python package for calculating genome wide pileup mappability"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Maximillian Marin", email = "maximilliangmarin@gmail.com" }
]

requires-python = ">=3.8"
dependencies = [
	"pandas",
    "numpy",
	"tqdm",
	"bioframe>=0.7.2",
]

[project.scripts]
pupmapper = "pupmapper.__init__:main"

[project.optional-dependencies]
test = [
	"pytest"
]

[project.urls]
"Homepage" = "https://github.com/maxgmarin/pupmapper"
